# python-employee-management-system

./: .coveragerc  .editorconfig  .flake8  .gitignore  BUILD.md  LICENSE  README.md  employee_manager.py  main.py  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: continuous-integration.yml
scripts/: __init__.py  employee.py  employee_id_anticollision.py
src/app/: main.py
src/app/models/: employee.py
tests/: test_EM.py  test_employee.py  test_employee_id_anticollision.py  test_example.py  test_main.py
tests/models/: test_employee.py
tests/scripts/: test_employee_id_anticollision.py
